Finish the poster

--- a/poster/Makefile
+++ b/poster/Makefile
@@ -9,12 +9,9 @@ all: $(PDFS)
 
 %.pdf: %.tex %.bib $(STYS)
 	pdflatex $<
-	bibtex $(basename $<)
-	pdflatex $<
-	pdflatex $<
 	@make clean
 
 clean:
-	-@rm -f *.aux *.log *.toc *.out *.bbl *.blg *.snm *.nav
+	-@rm -f *.aux *.log *.toc *.out *.bbl *.blg *.snm *.nav *.vrb
 
 .PHONY: all clean
