--- a/deps/klee-git/PKGBUILD
+++ b/deps/klee-git/PKGBUILD
@@ -9,7 +9,7 @@ license=('custom:UIUC')
 groups=()
 depends=('cxx-common=0.0.14' 'libcap' 'ncurses' 'sqlite' 'gperftools' 'zlib'
          'python' 'klee-uclibc' 'klee-libc++' 'lib32-glibc' 'lib32-gcc-libs')
-makedepends=('git' 'llvm10') # llvm10: for testing (lit)
+makedepends=('git')
 checkdepends=('python-tabulate')
 optdepends=()
 provides=('klee=2.1')
