Separate target binaries from main analysis

--- a/targets/Makefile
+++ b/targets/Makefile
@@ -2,21 +2,18 @@
 # Makefile
 #
 
-TARGETS     = simplerouter
-#TARGETS     = httpd lb simplerouter
+TARGETS     = simplerouter httpd lb
 
-LB_SRCS     = $(shell find ./lb -type f | grep -E '\.(c|cpp)$$')
-LB_OBJS     = $(notdir $(patsubst %.c,%.o,$(LB_SRCS:%.cpp=%.o)))
-VPATH       = $(shell find . -type d)
-
-CC          = clang
-LD          = clang
+CC          = /opt/cxx-common/libraries/llvm/bin/clang
+CXX         = /opt/cxx-common/libraries/llvm/bin/clang++
+LD          = /opt/cxx-common/libraries/llvm/bin/clang++
+LLVM_LINK   = /opt/cxx-common/libraries/llvm/bin/llvm-link
 LN_S        = ln -s
 INSTALL     = /usr/bin/install -c
 MKDIR_P     = /usr/bin/mkdir -p
 CFLAGS      = -g -O0 -Xclang -disable-O0-optnone -Wall -Wextra -Werror -std=c11
 CXXFLAGS    = -g -O0 -Xclang -disable-O0-optnone -Wall -Wextra -Werror -std=c++17
-CPPFLAGS    = -iquote ./lb
+CPPFLAGS    =
 LDFLAGS     =
 LIBS        =
 
@@ -26,33 +23,19 @@ LIBS        =
 
 all: $(TARGETS)
 
+simplerouter: simplerouter.o
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
+
 httpd: httpd.o
 	$(LD) $(LDFLAGS) -o $@ $^ $(LIBS)
+
+LB_SRCS = $(shell ls LB* | grep -E '\.(c|cpp)')
+LB_OBJS = $(notdir $(patsubst %.c,%.o,$(LB_SRCS:%.cpp=%.o)))
 
 lb: $(LB_OBJS)
 	$(LD) $(LDFLAGS) -o $@ $^ $(LIBS)
 
-simplerouter.bc: simplerouter
-	retdec-decompiler simplerouter
-
-driver.bc: driver.c
-	$(CC) $(CFLAGS) -emit-llvm -c $^ -o $@
-
-topdown: simplerouter.c
-	$(CC) $(CFLAGS) -emit-llvm -c $^ -o simplerouter.bc
-
-run-klee: topdown driver.bc
-	sudo klee --libc=uclibc --use-query-log=solver:kquery \
-		--external-calls=concrete --solver-optimize-divides \
-		--only-output-states-covering-new \
-		--search=nurs:covnew --use-incomplete-merge \
-		--exit-on-error-type=Abort --exit-on-error-type=ReportError \
-		--watchdog --max-time=1h --max-depth=100 --max-memory=8000 \
-		--link-llvm-lib=driver.bc simplerouter.bc
-
-		#--use-batching-search --batch-time=5s --batch-instructions=10000 \
-
 clean:
-	-@rm -rf $(TARGETS) *.o *.bc simplerouter
+	-@rm -rf $(TARGETS) *.o
 
-.PHONY: all clean topdown run-klee
+.PHONY: all clean
