--- a/deps/gllvm-git/PKGBUILD
+++ b/deps/gllvm-git/PKGBUILD
@@ -12,7 +12,7 @@ makedepends=('git' 'go')
 optdepends=('clang: backend LLVM compiler')
 provides=('gllvm')
 conflicts=('gllvm')
-source=("$pkgname"::'git+https://github.com/SRI-CSL/gllvm.git')
+source=("$pkgname"::'git+https://github.com/SRI-CSL/gllvm.git#commit=78dee1604d439e4aec7cb81010f667cb8636abec')
 sha256sums=('SKIP')
 
 pkgver() {
