Demo router 1 and 2

--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -20,5 +20,5 @@ add_compile_options(-g -O0)
 #
 set(DEMO_RTR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/demo-routers)
 add_executable(demo-router-1 ${DEMO_RTR_DIR}/r1.cpp)
-# add_executable(demo-router-2 ${DEMO_RTR_DIR}/r2.cpp)
+add_executable(demo-router-2 ${DEMO_RTR_DIR}/r2.cpp)
 # add_executable(demo-router-3 ${DEMO_RTR_DIR}/r3.cpp)
