Add scripts for env setup and building target programs

--- a/depends/mimesis-dev/PKGBUILD
+++ b/depends/mimesis-dev/PKGBUILD
@@ -24,6 +24,8 @@ depends=(
     wine-stable
     # other dependencies
     fuse3 python-docutils sdl12-compat lib32-sdl12-compat pxz-git python-distro
+    # target programs dependencies
+    cmake gcc clang yapf
 )
 makedepends=()
 checkdepends=()
