--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -11,7 +11,7 @@ unset(CMAKE_EXE_LINKER_FLAGS_DEBUG)
 
 #
 # Add debugging compile options for analysis.
-# Consider removing this later to test the symbolic executor.
+# TODO: Remove this later to test the symbolic executor.
 #
 add_compile_options(-g -O0)
 
