--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -22,22 +22,18 @@ cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH PROJECT_DIR)
 cmake_path(SET S2E_GUEST_COMMON_INCLUDE_DIR "${PROJECT_DIR}/src/s2e/guest/common/include")
 include_directories(
     ${S2E_GUEST_COMMON_INCLUDE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-#
-# Library sources
-#
-set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-FILE(GLOB_RECURSE LIB_SRCS CONFIGURE_DEPENDS ${LIB_DIR}/*.cpp)
 
 #
 # Add target programs to compile
 #
 set(DEMO_RTR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/demo-routers)
-add_executable(demo-router-1 ${DEMO_RTR_DIR}/r1.cpp ${LIB_SRCS})
-add_executable(demo-router-2 ${DEMO_RTR_DIR}/r2.cpp ${LIB_SRCS})
-add_executable(demo-router-3 ${DEMO_RTR_DIR}/r3.cpp ${LIB_SRCS})
+FILE(GLOB_RECURSE DEMO_RTR_SRCS CONFIGURE_DEPENDS ${DEMO_RTR_DIR}/*.cpp)
+foreach(RTR_SRC ${DEMO_RTR_SRCS})
+    get_filename_component(STEM ${RTR_SRC} NAME_WE)
+    add_executable(demo-${STEM} ${RTR_SRC} $<TARGET_OBJECTS:mimesis_libs>)
+    target_link_libraries(demo-${STEM} PRIVATE mimesis_libs)
+endforeach()
 
 set(HELLO_WORLD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/hello-world)
 add_executable(hello-world-1 ${HELLO_WORLD_DIR}/hw1.cpp)
