--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "s2e"]
 	path = src/s2e
 	url = git@github.com:kyechou/s2e.git
+[submodule "inotify-cpp"]
+	path = third_party/inotify-cpp
+	url = https://github.com/erikzenker/inotify-cpp.git
