--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,10 @@ target_link_libraries(sender PRIVATE
     Threads::Threads
     inotify-cpp-static
 )
+
+#
+# set main target capability
+#
+add_custom_target(setcap_sender ALL
+   sudo setcap "cap_sys_admin+pe cap_net_admin+pe cap_net_raw+pe cap_sys_ptrace+pe" sender
+   DEPENDS sender)
