--- a/depends/mimesis-dev/PKGBUILD
+++ b/depends/mimesis-dev/PKGBUILD
@@ -6,7 +6,7 @@ arch=('any')
 url="https://github.com/kyechou/mimesis"
 license=()
 depends=(
-    gcc clang cmake ninja docker boost yapf
+    gcc clang cmake ninja docker python yapf
 )
 makedepends=()
 checkdepends=()
