Use gcc/g++ because pcap++ requires gcc compilers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(BUILD_STATIC_LIBS ON)
 set(USE_BOOST_FILESYSTEM OFF)
 add_subdirectory(third_party/inotify-cpp)
 get_target_property(inotify_compile_options inotify-cpp-static COMPILE_OPTIONS)
-list(APPEND inotify_compile_options -Wno-unused-private-field)
+list(APPEND inotify_compile_options -Wno-unused-private-field -Wno-unused-result)
 set_target_properties(inotify-cpp-static PROPERTIES COMPILE_OPTIONS "${inotify_compile_options}")
 unset(BUILD_EXAMPLE)
 unset(BUILD_TEST)
