--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = src/s2e
 	url = git@github.com:kyechou/s2e.git
 [submodule "inotify-cpp"]
-	path = third_party/inotify-cpp
+	path = third_party/inotify-cpp/inotify-cpp
 	url = https://github.com/erikzenker/inotify-cpp.git
