Fix the linkage issue (everything needs to be compiled statically with -fPIC)

--- a/src/libps/CMakeLists.txt
+++ b/src/libps/CMakeLists.txt
@@ -1,11 +1,11 @@
 FILE(GLOB_RECURSE LIBPS_SRCS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 FILE(GLOB_RECURSE LIBPS_HDRS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 
-add_library(ps $<TARGET_OBJECTS:mimesis_libs> ${LIBPS_SRCS})
+add_library(ps ${LIBPS_SRCS})
+target_compile_options(ps PRIVATE -fPIC)
 target_include_directories(ps PUBLIC ${SRC_DIR})
 target_include_directories(ps SYSTEM PRIVATE ${LLVM_INCLUDE_DIRS} ${KLEE_INCLUDE_DIRS})
 target_link_libraries(ps PRIVATE
-    mimesis_libs
     klee
 )
 
